--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -66,46 +66,12 @@ jobs:
         run: yarn eslint --ext .js,.ts,.jsx,.tsx .
   build-and-push-docker:
     name: Build and push Docker image
-    runs-on: ubuntu-latest
-    if:
-      ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
-      inputs.publish }}
-    steps:
-      - name: Check out
-        uses: actions/checkout@v4
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Log in to the GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build and push Apollo CLI
-        uses: docker/build-push-action@v5
-        with:
-          platforms: linux/arm64/v8,linux/amd64
-          push: true
-          tags: ghcr.io/gmod/apollo-cli:development
-          context: packages/apollo-cli
-          outputs:
-            type=image,annotation-index.org.opencontainers.image.description=
-            Apollo CLI
-          cache-from: type=registry,ref=user/app:latest
-          cache-to: type=inline
-      - name: Build and push Apollo collaboration server image
-        uses: docker/build-push-action@v5
-        with:
-          platforms: linux/arm64/v8,linux/amd64
-          push: true
-          tags: ghcr.io/gmod/apollo-collaboration-server:development
-          outputs:
-            type=image,annotation-index.org.opencontainers.image.description=Apollo
-            collaboration server
-          cache-from: type=registry,ref=user/app:latest
-          cache-to: type=inline
+    uses: ./.github/workflows/build-and-push-docker.yml
+    with:
+      tag: 'development'
+    #if:
+    #  ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
+    #  inputs.publish }}
   deploy:
     name: Deploy to demo staging server
     runs-on: ubuntu-latest
