--- a/.github/workflows/build-and-push-docker.yml
+++ b/.github/workflows/build-and-push-docker.yml
@@ -8,44 +8,45 @@ on:
         type: string
 
 jobs:
-  name: Build and push Docker image
-  runs-on: ubuntu-latest
-  steps:
-    - name: Check out
-      uses: actions/checkout@v4
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v3
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-    - name: Log in to the GitHub Container Registry
-      uses: docker/login-action@v3
-      with:
-        registry: ghcr.io
-        username: ${{ github.repository_owner }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-    - name: Test
-      run: |
-        ls
-    # - name: Build and push Apollo CLI
-    #   uses: docker/build-push-action@v5
-    #   with:
-    #     platforms: linux/arm64/v8,linux/amd64
-    #     push: true
-    #     tags: ghcr.io/gmod/apollo-cli:${{ inputs.tag }}
-    #     context: packages/apollo-cli
-    #     outputs:
-    #       type=image,annotation-index.org.opencontainers.image.description=
-    #       Apollo CLI
-    #     cache-from: type=registry,ref=user/app:latest
-    #     cache-to: type=inline
-    # - name: Build and push Apollo collaboration server image
-    #   uses: docker/build-push-action@v5
-    #   with:
-    #     platforms: linux/arm64/v8,linux/amd64
-    #     push: true
-    #     tags: ghcr.io/gmod/apollo-collaboration-server:${{ inputs.tag }}
-    #     outputs:
-    #       type=image,annotation-index.org.opencontainers.image.description=Apollo
-    #       collaboration server
-    #     cache-from: type=registry,ref=user/app:latest
-    #     cache-to: type=inline
+  build-and-push-docker:
+    name: Build and push Docker image
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out
+        uses: actions/checkout@v4
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Log in to the GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Test
+        run: |
+          ls
+      # - name: Build and push Apollo CLI
+      #   uses: docker/build-push-action@v5
+      #   with:
+      #     platforms: linux/arm64/v8,linux/amd64
+      #     push: true
+      #     tags: ghcr.io/gmod/apollo-cli:${{ inputs.tag }}
+      #     context: packages/apollo-cli
+      #     outputs:
+      #       type=image,annotation-index.org.opencontainers.image.description=
+      #       Apollo CLI
+      #     cache-from: type=registry,ref=user/app:latest
+      #     cache-to: type=inline
+      # - name: Build and push Apollo collaboration server image
+      #   uses: docker/build-push-action@v5
+      #   with:
+      #     platforms: linux/arm64/v8,linux/amd64
+      #     push: true
+      #     tags: ghcr.io/gmod/apollo-collaboration-server:${{ inputs.tag }}
+      #     outputs:
+      #       type=image,annotation-index.org.opencontainers.image.description=Apollo
+      #       collaboration server
+      #     cache-from: type=registry,ref=user/app:latest
+      #     cache-to: type=inline
