--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,4 +30,4 @@ jobs:
     name: Build and push Docker image
     uses: ./.github/workflows/build-and-push-docker.yml
     with:
-      tag: $tag
+      tag: ${{ env.tag }}
