--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@apollo-annotation/jbrowse-plugin-apollo",
-  "version": "1.0.0-alpha.0",
+  "version": "0.1.4",
   "description": "Apollo plugin for JBrowse 2",
   "repository": {
     "type": "git",
@@ -125,6 +125,5 @@
   },
   "publishConfig": {
     "access": "public"
-  },
-  "stableVersion": "0.0.0"
+  }
 }
