--- a/packages/apollo-cli/package.json
+++ b/packages/apollo-cli/package.json
@@ -41,6 +41,7 @@
     "@oclif/core": "^3.18.2",
     "@oclif/plugin-help": "^6.0.8",
     "bson": "^6.3.0",
+    "conf": "^12.0.0",
     "joi": "^17.7.0",
     "open": "^9.1.0",
     "tslib": "^2.3.1",
