--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "test": "yarn workspaces foreach --all run test:ci"
   },
   "devDependencies": {
+    "@types/node": "^18.14.2",
+    "@types/yargs": "^17.0.32",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "@yarnpkg/types": "^4.0.0",
@@ -41,7 +43,9 @@
     "prettier": "^3.2.5",
     "prettier-plugin-import-sort": "^0.0.7",
     "react": "^18.2.0",
-    "typescript": "^5.1.6"
+    "tsx": "^4.6.2",
+    "typescript": "^5.1.6",
+    "yargs": "^17.7.2"
   },
   "private": true
 }
