--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test": "yarn workspaces foreach --all run test:ci"
   },
   "devDependencies": {
+    "@types/cross-spawn": "^6.0.6",
     "@types/node": "^18.14.2",
     "@types/yargs": "^17.0.32",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
