Test workflows as per #393

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,4 +27,8 @@ jobs:
     name: Build and push Docker image
     uses: ./.github/workflows/build-and-push-docker.yml
     with:
-      tag: devel
+      tag:
+  deploy-to-demo-staging-server:
+    name: Deploy to demo staging server
+    needs: [publish-docker]
+    uses: ./.github/workflows/deploy-to-demo-staging-server.yml
