Test script and workflow

--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@apollo-annotation/collaboration-server",
-  "version": "1.0.0-alpha.0",
+  "version": "0.1.7",
   "description": "",
   "author": "",
   "license": "Apache-2.0",
