Fix missing tag, enable code to delete assemblies

--- a/.github/workflows/cleanup_staging_server.yml
+++ b/.github/workflows/cleanup_staging_server.yml
@@ -73,7 +73,7 @@ jobs:
           apollo config rootCredentials.password ${{ secrets.ROOT_USER_PASSWORD }}
           apollo login
 
-          echo "apollo assembly get | apollo assembly delete -v -a -"
+          apollo assembly get | apollo assembly delete -v -a -
 
           apollo assembly add-fasta -i $demoDataDir/schistosoma_haematobium.TD2_PRJEB44434.WBPS19.genomic.fa -a schistosoma_haematobium -f
           apollo assembly add-fasta -i $demoDataDir/schistosoma_mansoni.PRJEA36577.WBPS19.genomic.fa -a schistosoma_mansoni -f
