--- a/packages/apollo-common/package.json
+++ b/packages/apollo-common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@apollo-annotation/common",
-  "version": "0.1.1",
+  "version": "1.0.0-alpha.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/GMOD/Apollo3.git",
