--- a/packages/apollo-schemas/package.json
+++ b/packages/apollo-schemas/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@apollo-annotation/schemas",
-  "version": "0.1.1",
+  "version": "1.0.0-alpha.0",
   "main": "./dist/index.js",
   "scripts": {
     "build": "tsc"
