--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@apollo-annotation/jbrowse-plugin-apollo",
-  "version": "0.1.1",
+  "version": "1.0.0-alpha.0",
   "description": "Apollo plugin for JBrowse 2",
   "repository": {
     "type": "git",
