--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@apollo-annotation/shared",
-  "version": "1.0.0-alpha.0",
+  "version": "0.1.10",
   "main": "./dist/index.js",
   "scripts": {
     "start": "tsc --build --watch",
