More workflow file updates

--- a/.github/workflows/reload_demo_data.yml
+++ b/.github/workflows/reload_demo_data.yml
@@ -5,7 +5,7 @@ on:
     inputs:
       environment:
         description: Environment in which to reload data
-        type: environment
+        type: string
         required: true
   workflow_dispatch:
     inputs:
