--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -65,13 +65,13 @@ jobs:
       - name: Lint codebase
         run: yarn eslint --ext .js,.ts,.jsx,.tsx .
   docker:
-    name: Build and push Docker image
     if:
       ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
       inputs.publish }}
     uses: ./.github/workflows/docker.yml
     with:
       tag: devel
+    secrets: inherit
   deploy:
     needs: [build, docker]
     if:
@@ -80,3 +80,4 @@ jobs:
     uses: ./.github/workflows/deploy.yml
     with:
       environment: staging
+    secrets: inherit
