Simplify script execution
* Do not record exit code (it wasn't working as intended)

* Do not delete sh script (good to keep at least for now)

--- a/.github/workflows/reload_demo_data.yml
+++ b/.github/workflows/reload_demo_data.yml
@@ -92,4 +92,4 @@ jobs:
           EOF
 
           rsync -av cleanup_apollo.$xid.sh staging:dario/
-          ssh staging -f "bash dario/cleanup_apollo.$xid.sh > dario/cleanup_apollo.$xid.out 2> dario/cleanup_apollo.$xid.err; echo 'Exit code:' $? >> dario/cleanup_apollo.$xid.err && rm dario/cleanup_apollo.$xid.sh"
+          ssh staging -f "bash dario/cleanup_apollo.$xid.sh > dario/cleanup_apollo.$xid.out 2> dario/cleanup_apollo.$xid.err"
