Run on push on any branch; do not run on any tag

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,7 +1,11 @@
 name: Push
 
 on:
-  push: null
+  push: 
+    branches:
+      - '**'
+    tags:
+      - '!**'
   workflow_dispatch:
     inputs:
       publish:
