Fix dependency on uploaded artifact
Put build & upload in `build_and_upload.yml` that we use in `push.yml` and
`deploy.yml`. This way `publish.yml`, which uses `deploy.yml`, can download
the artifact.

We could have put build & upload into `deploy.yml` but then we don't build
on every push but only on pushes triggering deployment.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,10 +8,14 @@ on:
         type: string
 
 jobs:
+  build:
+    name: Build and upload artifacts
+    uses: ./.github/workflows/build_and_upload.yml
   deploy:
     name: Deploy to ${{ inputs.environment }} demo server
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment }}
+    needs: [build]
     steps:
       - name: Check out
         uses: actions/checkout@v4
