--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,12 +9,25 @@ on:
 
 jobs:
   build:
-    uses: ./.github/workflows/build.yml
-  upload:
-    name: upload artifact
+    name: Build and upload
     runs-on: ubuntu-latest
     steps:
-      - name: upload artifact
+      - name: Check out
+        uses: actions/checkout@v4
+      - name: Use Node.js 18.x
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+          cache: yarn
+      - name: Install
+        run: yarn --immutable
+      - name: Build collaboration server
+        run: yarn build
+        working-directory: packages/apollo-collaboration-server
+      - name: Build plugin
+        run: yarn build
+        working-directory: packages/jbrowse-plugin-apollo
+      - name: Upload built plugin files
         uses: actions/upload-artifact@v4
         with:
           name: plugin
