--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -21,8 +21,25 @@ on:
 
 jobs:
   build:
+    name: Build
+    runs-on: ubuntu-latest
     if: ${{ github.event_name == 'push' || (inputs.deploy  &&  always()) }}
-    uses: ./.github/workflows/build.yml
+    steps:
+      - name: Check out
+        uses: actions/checkout@v4
+      - name: Use Node.js 18.x
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+          cache: yarn
+      - name: Install
+        run: yarn --immutable
+      - name: Build collaboration server
+        run: yarn build
+        working-directory: packages/apollo-collaboration-server
+      - name: Build plugin
+        run: yarn build
+        working-directory: packages/jbrowse-plugin-apollo
   lint:
     name: Lint
     runs-on: ubuntu-latest
@@ -53,7 +70,7 @@ jobs:
       tag: devel
     secrets: inherit
   deploy:
-    needs: [docker]
+    needs: [build, docker]
     if:
       ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') || (
       inputs.deploy  &&  always()) }}
