`deploy.yml` builds and upload. build job in `push.yml` only builds

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -70,7 +70,7 @@ jobs:
       tag: devel
     secrets: inherit
   deploy:
-    needs: [build, docker]
+    needs: [docker]
     if:
       ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') || (
       inputs.deploy  &&  always()) }}
