Update demo httpd and add deployment docs

--- a/.github/workflows/deploy/httpd.conf
+++ b/.github/workflows/deploy/httpd.conf
@@ -147,7 +147,7 @@ LoadModule proxy_http_module modules/mod_proxy_http.so
 #LoadModule proxy_scgi_module modules/mod_proxy_scgi.so
 #LoadModule proxy_uwsgi_module modules/mod_proxy_uwsgi.so
 #LoadModule proxy_fdpass_module modules/mod_proxy_fdpass.so
-#LoadModule proxy_wstunnel_module modules/mod_proxy_wstunnel.so
+LoadModule proxy_wstunnel_module modules/mod_proxy_wstunnel.so
 #LoadModule proxy_ajp_module modules/mod_proxy_ajp.so
 #LoadModule proxy_balancer_module modules/mod_proxy_balancer.so
 #LoadModule proxy_express_module modules/mod_proxy_express.so
@@ -196,7 +196,7 @@ LoadModule dir_module modules/mod_dir.so
 #LoadModule speling_module modules/mod_speling.so
 #LoadModule userdir_module modules/mod_userdir.so
 LoadModule alias_module modules/mod_alias.so
-LoadModule rewrite_module modules/mod_rewrite.so
+#LoadModule rewrite_module modules/mod_rewrite.so
 
 <IfModule unixd_module>
 #
@@ -238,7 +238,7 @@ ServerAdmin you@example.com
 #
 # If your host doesn't have a registered DNS name, enter its IP address here.
 #
-ServerName localhost:8080
+#ServerName www.example.com:80
 
 #
 # Deny access to the entirety of your server's filesystem. You must
@@ -549,11 +549,5 @@ SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
 </IfModule>
 
-<VirtualHost *:80>
-    RewriteEngine on
-
-    RewriteCond %{DOCUMENT_ROOT}/$1 !-f
-    RewriteCond %{DOCUMENT_ROOT}/$1 !-d
-    RewriteRule ^/(.*)$ http://apollo-collaboration-server:3999/$1 [P,QSA]
-    ProxyPassReverse / http://apollo-collaboration-server:3999/
-</VirtualHost>
+ProxyPassMatch "^/apollo/(.*)$" "http://apollo-collaboration-server:3999/$1" upgrade=websocket connectiontimeout=3600 timeout=3600
+ProxyPassReverse "/apollo/" "http://apollo-collaboration-server:3999/"
