--- a/docs/deployment/compose.yml
+++ b/docs/deployment/compose.yml
@@ -2,43 +2,37 @@ name: apollo-demo-site
 
 services:
   apollo-collaboration-server:
-    image: ghcr.io/gmod/apollo-collaboration-server:development
+    image: ghcr.io/gmod/apollo-collaboration-server
     depends_on:
       mongo-node-1:
         condition: service_healthy
+    env_file: .env
     environment:
       MONGODB_URI: mongodb://mongo-node-1:27017,mongo-node-2:27018/apolloDb?replicaSet=rs0
       FILE_UPLOAD_FOLDER: /data/uploads
-      LOG_LEVELS: error,warn,log,debug
       ALLOW_GUEST_USER: true
-      URL: ${URL}
-      JWT_SECRET: ${JWT_SECRET}
-      SESSION_SECRET: ${SESSION_SECRET}
-      GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
-      GOOGLE_CLIENT_SECRET: ${GOOGLE_CLIENT_SECRET}
-      ALLOW_ROOT_USER: true
-      ROOT_USER_NAME: ${ROOT_USER_NAME}
-      ROOT_USER_PASSWORD: ${ROOT_USER_PASSWORD}
+      GUEST_USER_ROLE: admin
+      URL: http://localhost
+      JWT_SECRET: change_this_value
+      SESSION_SECRET: change_this_value
     ports:
       - 3999:3999
     volumes:
       - uploaded-files-volume:/data/uploads
-    restart: unless-stopped
 
   client:
     build:
       args:
-        JBROWSE_VERSION: 2.10.3
+        APOLLO_VERSION: 0.1.16
+        JBROWSE_VERSION: 2.11.2
+        FORWARD_HOSTNAME: apollo-collaboration-server
+        FORWARD_PORT: 3999
+        URL: http://localhost
       context: .
     depends_on:
       - apollo-collaboration-server
     ports:
       - '80:80'
-    volumes:
-      - /home/ec2-user/deployment/config.json:/usr/local/apache2/htdocs/config.json
-      - /home/ec2-user/deployment/data/:/usr/local/apache2/htdocs/data/
-      - /home/ec2-user/deployment/demoData/:/usr/local/apache2/htdocs/demoData/
-    restart: unless-stopped
 
   mongo-node-1:
     image: mongo:7
@@ -75,7 +69,6 @@ services:
     volumes:
       - mongo-node-1_data:/data/db
       - mongo-node-1_config:/data/configdb
-    restart: unless-stopped
 
   mongo-node-2:
     image: mongo:7
@@ -90,7 +83,6 @@ services:
     volumes:
       - mongo-node-2_data:/data/db
       - mongo-node-2_config:/data/configdb
-    restart: unless-stopped
 
 volumes:
   mongo-node-1_config: null
