--- a/packages/apollo-common/package.json
+++ b/packages/apollo-common/package.json
@@ -11,7 +11,9 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@apollo-annotation/mst": "workspace:^",
     "@apollo-annotation/schemas": "workspace:^",
+    "@apollo-annotation/shared": "workspace:^",
     "@gmod/gff": "1.2.0",
     "@jbrowse/core": "^2.11.2",
     "bson-objectid": "^2.0.4",
