--- a/packages/apollo-common/package.json
+++ b/packages/apollo-common/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@gmod/gff": "1.2.0",
     "@jbrowse/core": "^2.7.0",
+    "apollo-mst": "workspace:^",
     "apollo-schemas": "workspace:^",
+    "apollo-shared": "workspace:^",
     "bson-objectid": "^2.0.4",
     "tslib": "^2.3.1"
   },
