--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,32 +8,20 @@
       "cwd": "${workspaceFolder}/packages/apollo-collaboration-server",
       "name": "Debug Collaboration Server",
       "request": "launch",
-      "runtimeArgs": [
-        "start:debug"
-      ],
+      "runtimeArgs": ["start:debug"],
       "runtimeExecutable": "yarn",
-      "skipFiles": [
-        "<node_internals>/**"
-      ],
-      "type": "node"
+      "skipFiles": ["<node_internals>/**"],
+      "type": "node",
     },
     {
       "name": "All Jest Tests",
       "type": "node",
       "request": "launch",
       "runtimeExecutable": "yarn",
-      "runtimeArgs": [
-        "run",
-        "--inspect-brk",
-        "test",
-        "--runInBand"
-      ],
+      "runtimeArgs": ["run", "--inspect-brk", "test", "--runInBand"],
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen",
-      "skipFiles": [
-        "<node_internals>/**",
-        ".yarn/cache/**"
-      ]
+      "skipFiles": ["<node_internals>/**", ".yarn/cache/**"],
     },
     {
       "name": "Current Jest Test",
@@ -45,14 +33,11 @@
         "--inspect-brk",
         "test",
         "--runInBand",
-        "${relativeFile}"
+        "${relativeFile}",
       ],
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen",
-      "skipFiles": [
-        "<node_internals>/**",
-        "**/.yarn/cache/**"
-      ]
+      "skipFiles": ["<node_internals>/**", "**/.yarn/cache/**"],
     },
     {
       "type": "node",
@@ -65,30 +50,22 @@
         "--testNamePattern",
         "${jest.testNamePattern}",
         "--runTestsByPath",
-        "${jest.testFile}"
+        "${jest.testFile}",
       ],
       "cwd": "${workspaceFolder}",
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen",
       "disableOptimisticBPs": true,
       "runtimeExecutable": "yarn",
-      "skipFiles": [
-        "<node_internals>/**",
-        "**/.yarn/cache/**"
-      ]
+      "skipFiles": ["<node_internals>/**", "**/.yarn/cache/**"],
     },
     {
       "type": "node",
       "request": "launch",
       "name": "Execute Command",
-      "skipFiles": [
-          "<node_internals>/**"
-      ],
+      "skipFiles": ["<node_internals>/**"],
       "program": "${workspaceFolder}/bin/dev.js",
-      "args": [
-        "hello",
-        "world",
-      ],
+      "args": ["hello", "world"],
     },
   ],
 }
