--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
       "type": "shell",
       "command": "yarn",
       "detail": "yarn",
-      "problemMatcher": []
+      "problemMatcher": [],
     },
     {
       "label": "start shared",
@@ -16,7 +16,7 @@
       "problemMatcher": [],
       "detail": "tsc --build --watch",
       "dependsOn": ["yarn"],
-      "isBackground": true
+      "isBackground": true,
     },
     {
       "label": "start server",
@@ -26,7 +26,7 @@
       "problemMatcher": [],
       "detail": "yarn build:shared && yarn start:nest --watch",
       "dependsOn": ["yarn"],
-      "isBackground": true
+      "isBackground": true,
     },
     {
       "label": "start plugin watch",
@@ -39,8 +39,8 @@
       "isBackground": true,
       "dependsOn": ["yarn"],
       "presentation": {
-        "group": "plugin-terminal"
-      }
+        "group": "plugin-terminal",
+      },
     },
     {
       "label": "start plugin server",
@@ -52,25 +52,18 @@
       "dependsOn": ["yarn"],
       "isBackground": true,
       "presentation": {
-        "group": "plugin-terminal"
-      }
+        "group": "plugin-terminal",
+      },
     },
     {
       "label": "start plugin",
-      "dependsOn": [
-        "start plugin watch",
-        "start plugin server"
-      ],
-      "problemMatcher": []
+      "dependsOn": ["start plugin watch", "start plugin server"],
+      "problemMatcher": [],
     },
     {
       "label": "Start",
-      "dependsOn": [
-        "start shared",
-        "start server",
-        "start plugin"
-      ],
-      "problemMatcher": []
-    }
-  ]
+      "dependsOn": ["start shared", "start server", "start plugin"],
+      "problemMatcher": [],
+    },
+  ],
 }
