--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,5 +3,6 @@
     "arcanis.vscode-zipfs",
     "dbaeumer.vscode-eslint",
     "ms-vscode-remote.remote-containers",
+    "esbenp.prettier-vscode",
   ],
 }
