--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "packages/*"
   ],
   "scripts": {
-    "lint": "eslint --report-unused-disable-directives --max-warnings 0 --ext .js,.ts,.jsx,.tsx .",
+    "lint": "cross-env NODE_OPTIONS='--max-old-space-size=4096' yarn eslint --report-unused-disable-directives --max-warnings 0 --ext .js,.ts,.jsx,.tsx .",
     "build:shared": "yarn workspace @apollo-annotation/shared run build",
     "start:shared": "yarn workspace @apollo-annotation/shared run start",
     "start:server": "yarn workspace @apollo-annotation/collaboration-server run start",
@@ -21,15 +21,14 @@
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "@yarnpkg/types": "^4.0.0",
+    "cross-env": "^7.0.3",
     "cross-spawn": "^7.0.3",
     "eslint": "^8.45.0",
-    "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-cypress": "^2.13.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-sort-destructure-keys": "^1.5.0",
@@ -41,8 +40,7 @@
     "jest": "^29.6.2",
     "lint-staged": "^15.2.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.2.5",
-    "prettier-plugin-import-sort": "^0.0.7",
+    "prettier": "^3.3.2",
     "react": "^18.2.0",
     "tsx": "^4.6.2",
     "typescript": "^5.1.6",
