Fetch authenticated config.json from collab server

--- a/packages/apollo-collaboration-server/.development.env
+++ b/packages/apollo-collaboration-server/.development.env
@@ -5,6 +5,9 @@
 # URL
 URL=http://localhost:3999
 
+# Name of your server (shown during the login process)
+NAME=Demo Server
+
 # MongoDB connection
 MONGODB_URI=mongodb://127.0.0.1:27017/apolloDb
 # Alternatively, can be a path to a file with the URI
@@ -48,6 +51,13 @@ MICROSOFT_CLIENT_SECRET=~Gr8Q~h6RTU7SMC-fjNxXy_~nabTD-ME_rFyLa.M
 ## OPTIONAL ##
 ##############
 
+# Description of what is hosted on your server
+DESCRIPTION=A server for Apollo development purposes
+
+# URL (relative or absolute) of the Apollo JBrowse plugin.
+# Defaults to relative URL 'apollo.js'
+PLUGIN_LOCATION=http://localhost:9000/dist/jbrowse-plugin-apollo.umd.development.js
+
 # Application port, defaults to 3999
 # PORT=3999
 
@@ -69,28 +79,25 @@ CHUNK_SIZE=500
 # Whether to broadcast users locations, defaults to true
 # BROADCAST_USER_LOCATION=true
 
+# Whether to allow a root user that can log in with a name and password. All
+# other users (besides guest) must sign in with an authentication provider.
+# Defaults to false
+# ALLOW_ROOT_USER=false
+# The root user name, required if ALLOW_ROOT_USER is true
+# ROOT_USER_NAME=root
+# The root user password, required if ALLOW_ROOT_USER is true
+# ROOT_USER_PASSWORD=password
+# Alternatively, can be a path to a file with the root user password
+# ROOT_USER_PASSWORD_FILE=/run/secrets/root-user-password
+
 # Whether to allow guest users who do not have to log in, defaults to false
 ALLOW_GUEST_USER=true
 # If guest users are allowed, what role will they have
 # Possible values are admin, readOnly and user; defaults to readonly
 # GUEST_USER_ROLE=readOnly
 
-# Apollo by default uses The Sequence Ontology. You can override this by
-# providing a path to an ontology file in the OBO Graphs JSON format. You can
-# use `robot` to convert an OBO or OWL to OBO Graphs JSON.
-# http://robot.obolibrary.org/convert
-# ONTOLOGY_FILE = '/data/ontology.json'
-
 # Comma-separated list of Apollo plugins to use
 # PLUGIN_URLS=https://example.com/apollo-plugin-example.umd.production.min.js
 # Alternatively, can be a path to a file with a list of plugin URLs, one URL per
 # line
 # PLUGIN_URLS_FILE=/data/plugin-urls
-
-##############################################################################
-## To login via username and password
-##############################################################################
-ALLOW_ROOT_USER=false
-ROOT_USER_NAME=admin
-ROOT_USER_PASSWORD=pass
-ROOT_USER_PASSWORD_FILE
