--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -46,6 +46,7 @@
     "@nestjs/terminus": "^10.0.1",
     "@nestjs/websockets": "^10.1.0",
     "connect-mongodb-session": "^3.1.1",
+    "deepmerge": "^4.3.1",
     "express": "^4.18.0",
     "express-session": "^1.17.3",
     "generic-filehandle": "^3.0.0",
