Fix CLI test env

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -40,7 +40,7 @@ jobs:
         working-directory: packages/jbrowse-plugin-apollo
       - name: Start apollo
         run: |
-          yarn --cwd packages/apollo-shared start &
+          ALLOW_ROOT_USER=true ROOT_USER_NAME=admin ROOT_USER_PASSWORD=pass yarn --cwd packages/apollo-shared start &
           yarn --cwd packages/apollo-collaboration-server start &
       - name: Run CLI tests
         run: python3 ./test/test.py TestCLI
