Get config.json from collaboration server (#371)
* Add a JBrowse module

* Tracks added - ready for test

* tmp commit

* tmp commit

* Get Apollo tracks from Mongo and include those in config.json

* tmp commit

* user can add track to Mongo from track info menu

* user can add/delete track to Mongo from track info menu

* Ready for draft PR

* Jbrowse -> JBrowse

* Use a 'none' role instead of public endpoints

* Add "Log out" Apollo menu item

* Fetch authenticated config.json from collab server

* Misc. fixes

* Store whole JBrowse config instead of just tracks

* Save session tracks to Apollo JBrowse config

* Fix feature selection refresh crash

* Remove static serving from collaboration server

* Fix/skip a few more tests

* Remove unused variable

* Fix CLI test env

* Move env variables to the correct place

---------

Co-authored-by: Garrett Stevens <stevens.garrett.j@gmail.com>

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Start apollo
         run: |
           yarn --cwd packages/apollo-shared start &
-          yarn --cwd packages/apollo-collaboration-server start &
+          ALLOW_ROOT_USER=true ROOT_USER_NAME=admin ROOT_USER_PASSWORD=pass yarn --cwd packages/apollo-collaboration-server start &
       - name: Run CLI tests
         run: python3 ./test/test.py TestCLI
         working-directory: packages/apollo-cli
