--- a/packages/apollo-cli/package.json
+++ b/packages/apollo-cli/package.json
@@ -50,6 +50,7 @@
     "yaml": "^2.3.4"
   },
   "devDependencies": {
+    "@apollo-annotation/shared": "workspace:^",
     "@istanbuljs/esm-loader-hook": "^0.2.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@oclif/test": "^3.1.3",
