--- a/packages/apollo-common/tsconfig.json
+++ b/packages/apollo-common/tsconfig.json
@@ -14,5 +14,9 @@
     "strictPropertyInitialization": false,
   },
   "include": ["./src"],
-  "references": [{ "path": "../apollo-schemas" }],
+  "references": [
+    { "path": "../apollo-schemas" },
+    { "path": "../apollo-shared" },
+    { "path": "../apollo-mst" },
+  ],
 }
