--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "tsc --build --watch",
     "build": "yarn clean && tsc --build",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist",
+    "test": "glob -c \"tsx --test --test-reporter spec \" \"**/*.test.ts\"",
+    "test:ci": "NODE_V8_COVERAGE=./coverage glob -c \"tsx --test --test-reporter spec --experimental-test-coverage \" \"**/*.test.ts\""
   },
   "dependencies": {
     "@apollo-annotation/common": "workspace:^",
@@ -26,10 +28,12 @@
     "@nestjs/core": "^10.1.0",
     "@types/node": "^18.14.2",
     "@types/rimraf": "^3",
+    "glob": "^11.0.0",
     "mobx": "^6.6.1",
     "mobx-state-tree": "^5.1.7",
     "mongoose": "^6.12.0",
     "rimraf": "^3.0.2",
+    "tsx": "^4.6.2",
     "typescript": "^5.5.3"
   },
   "peerDependencies": {
