Fix http.conf for demo server

--- a/.github/workflows/deploy/httpd.conf
+++ b/.github/workflows/deploy/httpd.conf
@@ -549,7 +549,7 @@ SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
 </IfModule>
 
-ProxyPassMatch "/config.json" "http://apollo-collaboration-server:3999/jbrowse/config.json"
+ProxyPass "/config.json" "http://apollo-collaboration-server:3999/jbrowse/config.json"
 ProxyPassReverse "/config.json" "http://apollo-collaboration-server:3999/jbrowse/config.json"
 ProxyPassMatch "^/apollo/(.*)$" "http://apollo-collaboration-server:3999/$1" upgrade=websocket connectiontimeout=3600 timeout=3600
 ProxyPassReverse "/apollo/" "http://apollo-collaboration-server:3999/"
