Standardize feature import (#423)
* before creating a new branch

* pre test done

* Misc. fixes

* Start unit tests for gff3ToAnnotationFeature

* Move some code from common to shared package

* Remove unused disable directive

* Remove more references to old gffId

* Improve gene import and display

---------

Co-authored-by: Kyosti Sutinen <kyosti@ebi.ac.uk>

--- a/packages/apollo-common/tsconfig.json
+++ b/packages/apollo-common/tsconfig.json
@@ -14,5 +14,5 @@
     "strictPropertyInitialization": false,
   },
   "include": ["./src"],
-  "references": [{ "path": "../apollo-schemas" }],
+  "references": [{ "path": "../apollo-schemas" }, { "path": "../apollo-mst" }],
 }
