Start using types and adapt code to new feature model
Add vscode tasks to start Apollo for cypress and cli testing

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -65,5 +65,35 @@
       "dependsOn": ["start shared", "start server", "start plugin"],
       "problemMatcher": [],
     },
+    {
+      "label": "start server cypress",
+      "type": "npm",
+      "script": "cypress:start",
+      "path": "packages/apollo-collaboration-server",
+      "problemMatcher": [],
+      "detail": "yarn build:shared && yarn start:nest --watch",
+      "dependsOn": ["yarn"],
+      "isBackground": true,
+    },
+    {
+      "label": "start server cli test",
+      "type": "npm",
+      "script": "test:cli:start",
+      "path": "packages/apollo-collaboration-server",
+      "problemMatcher": [],
+      "detail": "yarn build:shared && yarn start:nest --watch",
+      "dependsOn": ["yarn"],
+      "isBackground": true,
+    },
+    {
+      "label": "Start-cypress",
+      "dependsOn": ["start shared", "start server cypress", "start plugin"],
+      "problemMatcher": [],
+    },
+    {
+      "label": "Start-cli-test",
+      "dependsOn": ["start shared", "start server cli test", "start plugin"],
+      "problemMatcher": [],
+    },
   ],
 }
